[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1"]
[ext_resource type="Shader" path="res://shaders/ui_arcane_scifi_backdrop.gdshader" id="2"]

[node name="Menu" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.92)

[node name="Root" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = 18.0
offset_right = -22.0
offset_bottom = -18.0
theme_override_constants/separation = 18

[node name="Left" type="PanelContainer" parent="Root"]
size_flags_horizontal = 3

[node name="LeftPad" type="MarginContainer" parent="Root/Left"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_top = 14
theme_override_constants/margin_bottom = 14

[node name="LeftVBox" type="VBoxContainer" parent="Root/Left/LeftPad"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Root/Left/LeftPad/LeftVBox"]
text = "Collection"
theme_override_font_sizes/font_size = 26

[node name="CollectionScroll" type="ScrollContainer" parent="Root/Left/LeftPad/LeftVBox"]
size_flags_vertical = 3

[node name="CollectionBox" type="VBoxContainer" parent="Root/Left/LeftPad/LeftVBox/CollectionScroll"]
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="Right" type="PanelContainer" parent="Root"]
custom_minimum_size = Vector2(360, 0)

[node name="RightPad" type="MarginContainer" parent="Root/Right"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_top = 14
theme_override_constants/margin_bottom = 14

[node name="RightVBox" type="VBoxContainer" parent="Root/Right/RightPad"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 12

[node name="RosterTitle" type="Label" parent="Root/Right/RightPad/RightVBox"]
text = "Active Roster"
theme_override_font_sizes/font_size = 22

[node name="RosterBox" type="VBoxContainer" parent="Root/Right/RightPad/RightVBox"]
theme_override_constants/separation = 8

[node name="Spacer" type="Control" parent="Root/Right/RightPad/RightVBox"]
size_flags_vertical = 3

[node name="MapLabel" type="Label" parent="Root/Right/RightPad/RightVBox"]
text = "Map"
theme_override_font_sizes/font_size = 16

[node name="MapSelect" type="OptionButton" parent="Root/Right/RightPad/RightVBox"]
custom_minimum_size = Vector2(0, 40)
theme_override_font_sizes/font_size = 18

[node name="StartRun" type="Button" parent="Root/Right/RightPad/RightVBox"]
text = "Start Run"
custom_minimum_size = Vector2(0, 54)
theme_override_font_sizes/font_size = 20


